deploy: yarelm/blog@c83d05ee1c8eb3cfc1f6a5a7d747f194c2bb3196

--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>templates &middot; </title>
-        <meta name="description" content="My description">
+        <meta name="description" content="Piecing the Puzzle">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="generator" content="Hugo 0.85.0" />
         <meta name="robots" content="index,follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="templates">
-<meta property="og:description" content="My description">
+<meta property="og:description" content="Piecing the Puzzle">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://yarelm.github.io/tags/templates/">
         <link rel="stylesheet" href="https://yarelm.github.io/dist/site.css">
@@ -36,26 +36,26 @@
                     <div class="site-title-wrapper">
                         
                             <h1 class="site-title">
-                                <a href="https://yarelm.github.io/">My blog</a>
+                                <a href="https://yarelm.github.io/">Yarel Maman&#39;s Blog</a>
                             </h1>
                         
                         
                         
-                            <a class="button-square button-social hint--top" data-hint="Twitter" aria-label="Twitter" href="https://twitter.com/XXX" rel="me" >
+                            <a class="button-square button-social hint--top" data-hint="Twitter" aria-label="Twitter" href="https://twitter.com/YarelMam" rel="me" >
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
                             </a>
                         
                         
                         
                         
-                            <a class="button-square button-social hint--top" data-hint="Github" aria-label="Github" href="https://github.com/XXX" rel="me">
+                            <a class="button-square button-social hint--top" data-hint="Github" aria-label="Github" href="https://github.com/yarelm" rel="me">
                                 <i class="fa fa-github-alt" aria-hidden="true"></i>
                             </a>
                         
                         
                         
                         
-                            <a class="button-square button-social hint--top" data-hint="Email" aria-label="Send an Email" href="mailto:XXX@example.com">
+                            <a class="button-square button-social hint--top" data-hint="Email" aria-label="Send an Email" href="mailto:yarel.maman@gmail.com">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                             </a>
                         
@@ -78,8 +78,8 @@
 <div id="post-index" class="container">
     
     <header class="post-header">
-        <h1 class="post-title" itemprop="name">My headline</h1>
-        <p>My description</p>
+        <h1 class="post-title" itemprop="name">Yarel Maman&#39;s Blog</h1>
+        <p>Piecing the Puzzle</p>
     </header>
 
 
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="site-title-wrapper">
                     <h1 class="site-title">
-                        <a href="https://yarelm.github.io/">My blog</a>
+                        <a href="https://yarelm.github.io/">Yarel Maman&#39;s Blog</a>
                     </h1>
                     <a class="button-square button-jump-top js-jump-top" href="#" aria-label="Back to Top">
                         <i class="fa fa-angle-up" aria-hidden="true"></i>
